Fix signup form input visibility - CSS color fix
Problem:
- Input fields and select boxes on signup page not visible
- Black text on black background (#111)
- Users couldn't see what they were typing

Solution:
- Added color:#ffffff; to .reg_namebox input (line 2850)
- Changed select default color from #5b5b5b to #ffffff (line 32)
- Changed textarea default color from #5b5b5b to #ffffff (line 37)

Affected elements:
- Username input field
- Password input fields
- Email input field
- Gender select dropdown
- Promo code input
- Captcha input

Now all form fields are visible with white text on dark background

--- a/css/stylenew.css
+++ b/css/stylenew.css
@@ -29,12 +29,12 @@ color:#ffffff;
 
 select{
 font:normal 12px Tahoma;
-color:#5b5b5b;
+color:#ffffff;
 }
 
 textarea{
 font:normal 12px Tahoma;
-color:#5b5b5b;
+color:#ffffff;
 }
 
 li{
@@ -2847,6 +2847,7 @@ height:20px;
 background-color:#111;
 border:0px;
 padding:3px 0px 0px 6px;
+color:#ffffff;
 }
 
 .agreepart{
